# simple-linux-mod-manager

./: .gitignore  Cargo.toml  LICENSE  README.md
slmm/: Cargo.toml
slmm-cli/: Cargo.toml
slmm-cli/src/: main.rs
slmm-gui/: Cargo.toml
slmm/src/: error.rs  lib.rs  utils.rs
slmm/src/core/: manager.rs  mod.rs  models.rs  storage.rs
slmm/src/game_driver/: generic.rs  kind.rs  mod.rs  traits.rs
slmm/src/games/: mod.rs
