[package]
name = "slmm"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
walkdir = "2.5.0"
fs_extra = "1.3.0"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tracing = "0.1.41"
